<resources>
    <string name="app_name">Pandemic Control</string>
    <string name="add_one">+</string>
    <string name="addOneDescription">Increase 1</string>
    <string name="delOneDesc">Remove 1</string>
    <string name="reset">Reset Counting</string>
    <string name="defaultNumber">0</string>
    <string name="startCounting">0</string>
    <string name="config">Configurations</string>
    <string name="title_activity_settings">Settings</string>
    <string name="counting">Counting</string>
    <string name="limit">Limit Counting</string>
    <string name="typeCounting">Type Counting</string>
    <string name="percent">%</string>
    <string name="unit">Unit</string>
    <string name="nearLimit">Near to the limit</string>
    <string name="labelObs">OBS: The field above is for be advised when the counting is near
    to the limit</string>
    <string name="increaseSwitch">Increase button enabled</string>
    <string name="decreaseSwitch">Decrease button enabled</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">Salvar</string>
</resources>