<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".ConfigurationActivity">

    <TextView
        android:id="@+id/labelCounting"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginStart="104dp"
        android:text="@string/counting"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <EditText
        android:id="@+id/currentCounting"
        android:layout_width="68dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toEndOf="@+id/labelCounting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:onClick="save"
        android:text="@string/save"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetCounting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/currentCounting"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="@+id/labelCounting"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelLimitCounting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="36dp"
        android:text="@string/limit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCounting" />

    <EditText
        android:id="@+id/limitCounting"
        android:layout_width="68dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/labelLimitCounting"
        app:layout_constraintTop_toBottomOf="@+id/currentCounting"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/labelCountingType"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="56dp"
        android:text="@string/typeCounting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLimitCounting" />

    <RadioGroup
        android:id="@+id/typeCounting"
        android:layout_width="67dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/labelCountingType"
        app:layout_constraintTop_toBottomOf="@+id/limitCounting">

        <RadioButton
            android:id="@+id/unitType"
            android:layout_width="67dp"
            android:layout_height="54dp"
            android:checked="true"
            android:text="@string/unit" />

        <RadioButton
            android:id="@+id/percentType"
            android:layout_width="68dp"
            android:layout_height="50dp"
            android:text="@string/percent" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>